--- a/bericht/sections/introduction.tex
+++ b/bericht/sections/introduction.tex
@@ -1,1 +1,11 @@
 \chapter{Introduction}
+Als pretrained model hängt bert stark von dem korpus ab\\
+Genauso ist das vocabular sehr wichtig\\
+Andere arbeiten zeigten den einfluss eines erweiterten trainings/besser passenden korpus? referenz suchen\\
+=> Roberta zum Beispiel zeigte, dass allein weiteres training die ergebnisse verbessern kann 
+Wissenschaftlöiche texte unterschieden sich allgemein sehr stark von "normalen"\\
+=> Somit ist ein auf ähnliche weise trainiertes modell als bessere grundlagen für NLP aufgaben im wissenschaftlichen bereich sinnvoll\\
+Gab es in dieser form noch nicht\\
+besitzt daher potential.\\
+insbesondere als grundbaustein für unterschiedlichste aufgaben im !!! wiss. bereich\\
+Allgemein stellt sich das Problem von Datensätzen insbesondere da diese annotiert werden müssen (im wiss. bereich teuer da hochqualifizierte experten notwendig sind)\\
