Added BioBert section

--- a/bericht/sections/stateOfTheArt.tex
+++ b/bericht/sections/stateOfTheArt.tex
@@ -8,6 +8,8 @@ usefull even without finetuning\\
 nowadays used for many different NLP tasks\\
 Architecture of bert\\
 extensions of bert like roberta\\
+\section{BioBert}
+\cite{Lee2019}
 \section{Datasets}
 zum Beispiel NCBI-Disease (versuch einen goldstandard für corpora zu erstellen)\\
 -> sehr günstig um darauf entsprechende modelle zu trainieren \cite{Dogan2014}
