Language and color markings

--- a/bericht/document.tex
+++ b/bericht/document.tex
@@ -3,6 +3,8 @@
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{titlesec}
+\usepackage{hyperref}
+\usepackage[dvipsnames]{xcolor}
 
 
 \titleformat{\chapter}[display]
