--- a/bericht/sections/discussion.tex
+++ b/bericht/sections/discussion.tex
@@ -1,1 +1,5 @@
 \chapter{Discussion}
+\color{ForestGreen}
+präsentation und kritische auseinandersetzung mit eigenen Daten\\
+gefolgt mit dem vergleich zu den orginal reporteten Daten.
+\color{black}
