--- a/bericht/sections/introduction.tex
+++ b/bericht/sections/introduction.tex
@@ -1,4 +1,5 @@
 \chapter{Introduction}
+\color{ForestGreen}
 \begin{itemize}
 	\item Als pretrained model hängt bert stark von dem korpus ab
 	\item Genauso ist das vocabular sehr wichtig
@@ -11,3 +12,4 @@
 	\item insbesondere als grundbaustein für unterschiedlichste aufgaben im !!! wiss. bereich
 	\item Allgemein stellt sich das Problem von Datensätzen insbesondere da diese annotiert werden müssen (im wiss. bereich teuer da hochqualifizierte experten notwendig sind)
 \end{itemize}
+\color{black}
