Added section 'Problems' in chapter 'Experiments'

--- a/bericht/sections/experiments.tex
+++ b/bericht/sections/experiments.tex
@@ -40,3 +40,10 @@ In this section, we will take a brief look at the usability of different hardwar
 At this point I will briefly describe the extent to which AMD's ROCM stack is usable, because surprisingly I was able to define the model and make predictions with it in a newly generated state. Unfortunately, due to instability in the ROCM stack, the Linux kernel was no longer able to use the GPU after an update that must have broken some internal dependencies that the kernel and ROCM driver rely on, and thus the video output of the computer was also unusable. Even though this shows that an AMD GPU is indeed capable of running the Transformer package and loading at least a defined model. Even though I can't disclose whether the model could be trained or otherwise used further. This fact in itself is surprising, since AMD itself describes the support status of the RX580 as "may or may not work" and Julia describes AMD GPU support as Level 3, which is the lowest level of support. (verweis zu der aussage)[belege und verweis zu ROCM]\\
 However, I would advise anyone against installing the ROCM stack on a production system, as it is still unstable and I would therefore recommend experimenting only in some form of virtualized environment. Of course, this warning only applies to systems that rely on working video output.\\
 Due to the failure with the ROCM stack, only the MX940 and the google-colab environment will be considered in the following part. These two platforms will not only be compared, but also how they behave in the face of two different implementations written in Julia and Python.
+
+\color{red}
+\section{Complications}
+In particular, the classic text classification was relatively unproblematic to implement. Nevertheless, there were some minor obstacles on the way to a finished reproduction of the original CLS. The order will follow that of the information flow in the model, starting with the input data and ending with the output.
+
+After this sequence, the first problem is to transform the data, which are now already the two text areas with the special tokens "[\textless\textless]", "[\textgreater\textgreater]", "[~[[~]" and "[~]]~]" marked, the sentences now have to be processed by the tokenizer and by wordpiece, without changing the mentioned tokens. If the individual sentences would be processed without further precautions, then the special tokens would be modified. Through this alteration, however, these tokens would no longer be interpreted by the vocabulary as special tokens, but would be regarded as "normal" words. To avoid this, a wrapper was written, which divides the text into partitions and processes them individually by the Tokenizer and Wordpiece. This was particularly necessary due to the fact that the partitions marked by a pair of corresponding special tokens might not have the same length after processing. Due to this potential variation of the segment length, it is not directly possible to find the "new" position of the tokens from the old one and simply adding them manually. Instead, the individual sections separated by the special tokens are processed individually and subsequently the special tokens are placed between the corresponding segments. This procedure is based on the addition of the "[CLS]" and "[SEP]" tokens in the CLS, but extends it significantly.
+\color{black}
