--- a/src/DataMining.ipynb
+++ b/src/DataMining.ipynb
@@ -39,7 +39,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MX70XdxS6DAs",
-        "outputId": "c7979374-88a0-46dd-aef1-6cdcd877f39f"
+        "outputId": "2e63f8b2-0f73-49ab-f978-1c13e0535adb"
       },
       "source": [
         "%%shell\n",
@@ -75,22 +75,22 @@
           "output_type": "stream",
           "text": [
             "Julia not found installing ...\n",
-            "2021-03-18 13:48:05 URL:https://storage.googleapis.com/julialang2/bin/linux/x64/1.5/julia-1.5.3-linux-x86_64.tar.gz [105260711/105260711] -> \"/tmp/julia.tar.gz\" [1]\n",
+            "2021-03-29 02:16:02 URL:https://storage.googleapis.com/julialang2/bin/linux/x64/1.5/julia-1.5.3-linux-x86_64.tar.gz [105260711/105260711] -> \"/tmp/julia.tar.gz\" [1]\n",
             "\u001b[32m\u001b[1m Installing\u001b[22m\u001b[39m known registries into `~/.julia`\n",
             "######################################################################## 100.0%\n",
             "\u001b[32m\u001b[1m      Added\u001b[22m\u001b[39m registry `General` to `~/.julia/registries/General`\n",
             "\u001b[32m\u001b[1m  Resolving\u001b[22m\u001b[39m package versions...\n",
-            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m SoftGlobalScope ─ v1.1.0\n",
-            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m libsodium_jll ─── v1.0.18+1\n",
-            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m IJulia ────────── v1.23.2\n",
-            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m ZeroMQ_jll ────── v4.3.2+6\n",
-            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m VersionParsing ── v1.2.0\n",
             "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m Conda ─────────── v1.5.1\n",
-            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m JSON ──────────── v0.21.1\n",
-            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m Parsers ───────── v1.0.16\n",
-            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m JLLWrappers ───── v1.2.0\n",
-            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m ZMQ ───────────── v1.2.1\n",
+            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m VersionParsing ── v1.2.0\n",
+            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m ZeroMQ_jll ────── v4.3.2+6\n",
+            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m libsodium_jll ─── v1.0.18+1\n",
+            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m SoftGlobalScope ─ v1.1.0\n",
             "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m MbedTLS ───────── v1.0.3\n",
+            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m Parsers ───────── v1.1.0\n",
+            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m ZMQ ───────────── v1.2.1\n",
+            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m IJulia ────────── v1.23.2\n",
+            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m JSON ──────────── v0.21.1\n",
+            "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m JLLWrappers ───── v1.2.0\n",
             "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m Artifacts ─────── v1.3.0\n",
             "\u001b[32m\u001b[1m  Installed\u001b[22m\u001b[39m MbedTLS_jll ───── v2.16.8+1\n",
             "\u001b[32m\u001b[1mDownloading\u001b[22m\u001b[39m artifact: libsodium\n",
@@ -109,7 +109,7 @@
             " \u001b[90m [682c06a0] \u001b[39m\u001b[92m+ JSON v0.21.1\u001b[39m\n",
             " \u001b[90m [739be429] \u001b[39m\u001b[92m+ MbedTLS v1.0.3\u001b[39m\n",
             " \u001b[90m [c8ffd9c3] \u001b[39m\u001b[92m+ MbedTLS_jll v2.16.8+1\u001b[39m\n",
-            " \u001b[90m [69de0a69] \u001b[39m\u001b[92m+ Parsers v1.0.16\u001b[39m\n",
+            " \u001b[90m [69de0a69] \u001b[39m\u001b[92m+ Parsers v1.1.0\u001b[39m\n",
             " \u001b[90m [b85f4697] \u001b[39m\u001b[92m+ SoftGlobalScope v1.1.0\u001b[39m\n",
             " \u001b[90m [81def892] \u001b[39m\u001b[92m+ VersionParsing v1.2.0\u001b[39m\n",
             " \u001b[90m [c2297ded] \u001b[39m\u001b[92m+ ZMQ v1.2.1\u001b[39m\n",
@@ -207,7 +207,7 @@
         "enable_gpu(true)\n",
         "ENV[\"DATADEPS_ALWAYS_ACCEPT\"] = true"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -571,7 +571,7 @@
         "                        mv(\"$(SubString.(file,1,findlast.(==('.'),file).-1))/data/\",\"$(SubString.(file,1,findlast.(==('/'),file)))/data\" ))\n",
         "))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -640,7 +640,7 @@
         ")\n",
         "show(scibert_scivocab_uncased_model)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -716,7 +716,7 @@
         "    return l\n",
         "end"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -766,7 +766,7 @@
         "@show df[!,\"text\"][1]\n",
         "df[!,\"text\"][1] |> scibert_scivocab_uncased_tokenizer |> scibert_scivocab_uncased_wordpiece"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -831,15 +831,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wJmRa5mRym4i",
-        "outputId": "9757820a-4dd4-4f37-ad9d-76e288175d3b"
+        "outputId": "e0de5906-0bcb-44e5-ddf0-fb3c8aa2d39c"
       },
       "source": [
         "\n",
         "markline(s1) = [\"[CLS]\"; s1; \"[SEP]\"; s2; \"[SEP]\"]\n",
         "\n",
-        "findfirst(\"]]\", df[!,\"text\"][1])\n",
-        "\n",
-        "function tokenize(sentence, tokenizer, wordpiece)\n",
+        "function tokenize(sentence,label)\n",
         "    attention_start = findfirst(\"<<\",sentence)[1]\n",
         "    attention_end  = findfirst(\">>\", sentence)[1]\n",
         "\n",
@@ -847,31 +845,44 @@
         "    token_end = findfirst(\"]]\", sentence)[1]\n",
         "\n",
         "    if attention_start < token_start\n",
-        "      output = [tokenizer(SubString(sentence,1, attention_start-1)) |> wordpiece; \"[<<]\" ;\n",
-        "        tokenizer(SubString(sentence,attention_start+2, attention_end-1))|> wordpiece; \"[>>]\";\n",
-        "        tokenizer(SubString(sentence,attention_end+2, token_start-1))|> wordpiece; \"[[[]\";\n",
-        "        tokenizer(SubString(sentence,token_start+2, token_end-1))|> wordpiece; \"[]]]\";\n",
-        "        tokenizer(SubString(sentence,token_end+2, length(sentence)))|> wordpiece ]\n",
+        "      b = split(sentence, r\"<<|>>|\\[\\[|\\]\\]\")\n",
+        "\n",
+        "      output = [\"[CLS]\";b[1]|>tokenizer |> wordpiece; \"[<<]\" ;\n",
+        "        b[2]|>tokenizer|> wordpiece; \"[>>]\";\n",
+        "        b[3]|>tokenizer|> wordpiece; \"[[[]\";\n",
+        "        b[4]|>tokenizer|> wordpiece; \"[]]]\";\n",
+        "        b[5]|>tokenizer|> wordpiece ;\"[SEP]\"]\n",
         "    else\n",
-        "      output = []\n",
+        "      b = split(sentence, r\"<<|>>|\\[\\[|\\]\\]\")\n",
+        "      output = [\"[CLS]\";b[1]|>tokenizer|> wordpiece; \"[[[]\";\n",
+        "        b[2]|>tokenizer|> wordpiece; \"[]]]\";\n",
+        "        b[3]|>tokenizer |> wordpiece; \"[<<]\" ;\n",
+        "        b[4]|>tokenizer|> wordpiece; \"[>>]\";\n",
+        "        b[5]|>tokenizer|> wordpiece ;\"[SEP]\"]\n",
         "    end\n",
         "\n",
-        "    return output\n",
+        "\n",
+        "    tok = vocab(output)\n",
+        "    segment = fill!(similar(tok), 1)\n",
+        "    label = onehot(label, labels)\n",
+        "    mask = getmask([output])\n",
+        "\n",
+        "    return (tok=tok, segment=segment), label, mask\n",
         "end"
       ],
-      "execution_count": 71,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tokenize (generic function with 3 methods)"
+              "tokenize (generic function with 1 method)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 71
+          "execution_count": 2
         }
       ]
     },
@@ -887,7 +898,7 @@
       "source": [
         "tokenize(df[!,\"text\"][1],scibert_scivocab_uncased_tokenizer,scibert_scivocab_uncased_wordpiece)"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -996,7 +1007,7 @@
         "label = onehotbatch([\"test\"], labels)\n",
         "#label = onehotbatch([\"test\"], labels)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
