--- a/bericht/sections/experiments.tex
+++ b/bericht/sections/experiments.tex
@@ -41,9 +41,12 @@ At this point I will briefly describe the extent to which AMD's ROCM stack is us
 However, I would advise anyone against installing the ROCM stack on a production system, as it is still unstable and I would therefore recommend experimenting only in some form of virtualized environment. Of course, this warning only applies to systems that rely on working video output.\\
 Due to the failure with the ROCM stack, only the MX940 and the google-colab environment will be considered in the following part. These two platforms will not only be compared, but also how they behave in the face of two different implementations written in Julia and Python.
 
-\color{red}
+
 \section{Complications}
 In particular, the classic text classification was relatively unproblematic to implement. Nevertheless, there were some minor obstacles on the way to a finished reproduction of the original CLS. The order will follow that of the information flow in the model, starting with the input data and ending with the output.
 
-After this sequence, the first problem is to transform the data, which are now already the two text areas with the special tokens "[\textless\textless]", "[\textgreater\textgreater]", "[~[[~]" and "[~]]~]" marked, the sentences now have to be processed by the tokenizer and by wordpiece, without changing the mentioned tokens. If the individual sentences would be processed without further precautions, then the special tokens would be modified. Through this alteration, however, these tokens would no longer be interpreted by the vocabulary as special tokens, but would be regarded as "normal" words. To avoid this, a wrapper was written, which divides the text into partitions and processes them individually by the Tokenizer and Wordpiece. This was particularly necessary due to the fact that the partitions marked by a pair of corresponding special tokens might not have the same length after processing. Due to this potential variation of the segment length, it is not directly possible to find the "new" position of the tokens from the old one and simply adding them manually. Instead, the individual sections separated by the special tokens are processed individually and subsequently the special tokens are placed between the corresponding segments. This procedure is based on the addition of the "[CLS]" and "[SEP]" tokens in the CLS, but extends it significantly.
+After this sequence, the first problem is to transform the data, which are now already the two text areas with the special tokens "[\textless\textless]", "[\textgreater\textgreater]", "[~[[~]" and "[~]]~]" marked, the sentences now have to be processed by the tokenizer and by wordpiece, without changing the mentioned tokens. If the individual sentences would be processed without further precautions, then the special tokens would be modified. Through this alteration, however, these tokens would no longer be interpreted by the vocabulary as special tokens, but would be regarded as "normal" words. To avoid this, a wrapper was written, which divides the text into partitions and processes them individually by the Tokenizer and Wordpiece. This was particularly necessary due to the fact that the partitions marked by a pair of corresponding special tokens might not have the same length after processing. Due to this potential variation of the segment length, it is not directly possible to find the new position of the tokens from the old one and simply adding them manually. Instead, the individual sections separated by the special tokens are processed individually and subsequently the special tokens are placed between the corresponding segments. This procedure is based on the addition of the "[CLS]" and "[SEP]" tokens in the CLS, but extends it.
+
+\color{red}
+The next problem follows directly the previously described one. The individual sentences of the data sets sometimes consist of characters that do not occupy only one "code unit" and so problems can occur if the end of a string is expected at the position of the length of the string.A 'code unit' describes here a fixed size in the memory which is needed in general for the coding of a single character. Fortunately, an error is generated if an attempt is made to create a view of a string that ends or begins in the middle of a character that spans multiple code units. Although the error is relatively vague, a closer look at the string quickly reveals that the error occurs in the vicinity of special characters. With this knowledge one can quickly find the explanation and the underlying problem in the corresponding documentation due to the different number of code units that are sometimes necessary to encode special characters. The functions 'firstindex' and 'lastindex' or the 'split' function can help here. All these functions take into account the differences between position and code unit.
 \color{black}
